--- a/src/FogBugz.Api.Tests/FogBugz.Api.Tests.csproj
+++ b/src/FogBugz.Api.Tests/FogBugz.Api.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml.XDocument" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FogBugzClientTest.cs" />
     <Compile Include="Parsers\FiltersListParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FogBugzIntegrationTest.cs" />
