--- a/src/FogBugz.Api.Tests/FogBugz.Api.Tests.csproj
+++ b/src/FogBugz.Api.Tests/FogBugz.Api.Tests.csproj
@@ -33,6 +33,12 @@
     <Reference Include="FakeItEasy">
       <HintPath>..\packages\FakeItEasy.1.25.2\lib\net40\FakeItEasy.dll</HintPath>
     </Reference>
+    <Reference Include="FluentAssertions">
+      <HintPath>..\packages\FluentAssertions.3.2.2\lib\net45\FluentAssertions.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentAssertions.Core">
+      <HintPath>..\packages\FluentAssertions.3.2.2\lib\net45\FluentAssertions.Core.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -44,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FogBugzClientTest.cs" />
+    <Compile Include="Parsers\CaseParserTest.cs" />
     <Compile Include="Parsers\FiltersListParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FogBugzIntegrationTest.cs" />
