Start integration test for loading case
(incomplete)

--- a/src/FogBugz.Api/FogBugz.Api.csproj
+++ b/src/FogBugz.Api/FogBugz.Api.csproj
@@ -32,6 +32,7 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CaseColumns.cs" />
     <Compile Include="Domain\Area.cs" />
     <Compile Include="Domain\AttachmentIconId.cs" />
     <Compile Include="Domain\Case.cs" />
