Integration tests working

--- a/src/FogBugz.Api.Tests/FogBugz.Api.Tests.csproj
+++ b/src/FogBugz.Api.Tests/FogBugz.Api.Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml.XDocument" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\FilterIdTest.cs" />
     <Compile Include="Parsers\CaseParserTest.cs" />
     <Compile Include="Parsers\FiltersListParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
